qt/gen_qformlayout.nim


proc fcQFormLayout_new(parent: pointer): ptr cQFormLayout {.importc: "QFormLayout_new".}
proc fcQFormLayout_new2(): ptr cQFormLayout {.importc: "QFormLayout_new2".}
proc fcQFormLayout_metaObject(self: pointer, ): pointer {.importc: "QFormLayout_metaObject".}
proc fcQFormLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QFormLayout_metacast".}
proc fcQFormLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QFormLayout_metacall".}
proc fcQFormLayout_tr(s: cstring): struct_miqt_string {.importc: "QFormLayout_tr".}
proc fcQFormLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QFormLayout_trUtf8".}
proc fcQFormLayout_setFieldGrowthPolicy(self: pointer, policy: cint): void {.importc: "QFormLayout_setFieldGrowthPolicy".}
proc fcQFormLayout_fieldGrowthPolicy(self: pointer, ): cint {.importc: "QFormLayout_fieldGrowthPolicy".}
proc fcQFormLayout_setRowWrapPolicy(self: pointer, policy: cint): void {.importc: "QFormLayout_setRowWrapPolicy".}
proc fcQFormLayout_rowWrapPolicy(self: pointer, ): cint {.importc: "QFormLayout_rowWrapPolicy".}
proc fcQFormLayout_setLabelAlignment(self: pointer, alignment: cint): void {.importc: "QFormLayout_setLabelAlignment".}
proc fcQFormLayout_labelAlignment(self: pointer, ): cint {.importc: "QFormLayout_labelAlignment".}
proc fcQFormLayout_setFormAlignment(self: pointer, alignment: cint): void {.importc: "QFormLayout_setFormAlignment".}
proc fcQFormLayout_formAlignment(self: pointer, ): cint {.importc: "QFormLayout_formAlignment".}
proc fcQFormLayout_setHorizontalSpacing(self: pointer, spacing: cint): void {.importc: "QFormLayout_setHorizontalSpacing".}
proc fcQFormLayout_horizontalSpacing(self: pointer, ): cint {.importc: "QFormLayout_horizontalSpacing".}
proc fcQFormLayout_setVerticalSpacing(self: pointer, spacing: cint): void {.importc: "QFormLayout_setVerticalSpacing".}
proc fcQFormLayout_verticalSpacing(self: pointer, ): cint {.importc: "QFormLayout_verticalSpacing".}
proc fcQFormLayout_spacing(self: pointer, ): cint {.importc: "QFormLayout_spacing".}
proc fcQFormLayout_setSpacing(self: pointer, spacing: cint): void {.importc: "QFormLayout_setSpacing".}
proc fcQFormLayout_addRow(self: pointer, label: pointer, field: pointer): void {.importc: "QFormLayout_addRow".}
proc fcQFormLayout_addRow2(self: pointer, label: pointer, field: pointer): void {.importc: "QFormLayout_addRow2".}
proc fcQFormLayout_addRow3(self: pointer, labelText: struct_miqt_string, field: pointer): void {.importc: "QFormLayout_addRow3".}
proc fcQFormLayout_addRow4(self: pointer, labelText: struct_miqt_string, field: pointer): void {.importc: "QFormLayout_addRow4".}
proc fcQFormLayout_addRowWithWidget(self: pointer, widget: pointer): void {.importc: "QFormLayout_addRowWithWidget".}
proc fcQFormLayout_addRowWithLayout(self: pointer, layout: pointer): void {.importc: "QFormLayout_addRowWithLayout".}
proc fcQFormLayout_insertRow(self: pointer, row: cint, label: pointer, field: pointer): void {.importc: "QFormLayout_insertRow".}
proc fcQFormLayout_insertRow2(self: pointer, row: cint, label: pointer, field: pointer): void {.importc: "QFormLayout_insertRow2".}
proc fcQFormLayout_insertRow3(self: pointer, row: cint, labelText: struct_miqt_string, field: pointer): void {.importc: "QFormLayout_insertRow3".}
proc fcQFormLayout_insertRow4(self: pointer, row: cint, labelText: struct_miqt_string, field: pointer): void {.importc: "QFormLayout_insertRow4".}
proc fcQFormLayout_insertRow5(self: pointer, row: cint, widget: pointer): void {.importc: "QFormLayout_insertRow5".}
proc fcQFormLayout_insertRow6(self: pointer, row: cint, layout: pointer): void {.importc: "QFormLayout_insertRow6".}
proc fcQFormLayout_removeRow(self: pointer, row: cint): void {.importc: "QFormLayout_removeRow".}
proc fcQFormLayout_removeRowWithWidget(self: pointer, widget: pointer): void {.importc: "QFormLayout_removeRowWithWidget".}
proc fcQFormLayout_removeRowWithLayout(self: pointer, layout: pointer): void {.importc: "QFormLayout_removeRowWithLayout".}
proc fcQFormLayout_takeRow(self: pointer, row: cint): pointer {.importc: "QFormLayout_takeRow".}
proc fcQFormLayout_takeRowWithWidget(self: pointer, widget: pointer): pointer {.importc: "QFormLayout_takeRowWithWidget".}
proc fcQFormLayout_takeRowWithLayout(self: pointer, layout: pointer): pointer {.importc: "QFormLayout_takeRowWithLayout".}
proc fcQFormLayout_setItem(self: pointer, row: cint, role: cint, item: pointer): void {.importc: "QFormLayout_setItem".}
proc fcQFormLayout_setWidget(self: pointer, row: cint, role: cint, widget: pointer): void {.importc: "QFormLayout_setWidget".}
proc fcQFormLayout_setLayout(self: pointer, row: cint, role: cint, layout: pointer): void {.importc: "QFormLayout_setLayout".}
proc fcQFormLayout_itemAt(self: pointer, row: cint, role: cint): pointer {.importc: "QFormLayout_itemAt".}
proc fcQFormLayout_labelForField(self: pointer, field: pointer): pointer {.importc: "QFormLayout_labelForField".}
proc fcQFormLayout_labelForFieldWithField(self: pointer, field: pointer): pointer {.importc: "QFormLayout_labelForFieldWithField".}
proc fcQFormLayout_addItem(self: pointer, item: pointer): void {.importc: "QFormLayout_addItem".}
proc fcQFormLayout_itemAtWithIndex(self: pointer, index: cint): pointer {.importc: "QFormLayout_itemAtWithIndex".}
proc fcQFormLayout_takeAt(self: pointer, index: cint): pointer {.importc: "QFormLayout_takeAt".}
proc fcQFormLayout_setGeometry(self: pointer, rect: pointer): void {.importc: "QFormLayout_setGeometry".}
proc fcQFormLayout_minimumSize(self: pointer, ): pointer {.importc: "QFormLayout_minimumSize".}
proc fcQFormLayout_sizeHint(self: pointer, ): pointer {.importc: "QFormLayout_sizeHint".}
proc fcQFormLayout_invalidate(self: pointer, ): void {.importc: "QFormLayout_invalidate".}
proc fcQFormLayout_hasHeightForWidth(self: pointer, ): bool {.importc: "QFormLayout_hasHeightForWidth".}
proc fcQFormLayout_heightForWidth(self: pointer, width: cint): cint {.importc: "QFormLayout_heightForWidth".}
proc fcQFormLayout_expandingDirections(self: pointer, ): cint {.importc: "QFormLayout_expandingDirections".}
proc fcQFormLayout_count(self: pointer, ): cint {.importc: "QFormLayout_count".}
proc fcQFormLayout_rowCount(self: pointer, ): cint {.importc: "QFormLayout_rowCount".}
proc fcQFormLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QFormLayout_tr2".}
proc fcQFormLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QFormLayout_tr3".}
proc fcQFormLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QFormLayout_trUtf82".}
proc fcQFormLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QFormLayout_trUtf83".}
proc fQFormLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QFormLayout_virtualbase_metacall".}
proc fcQFormLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_metacall".}
proc fQFormLayout_virtualbase_addItem(self: pointer, item: pointer): void{.importc: "QFormLayout_virtualbase_addItem".}
proc fcQFormLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_addItem".}
proc fQFormLayout_virtualbase_itemAtWithIndex(self: pointer, index: cint): pointer{.importc: "QFormLayout_virtualbase_itemAtWithIndex".}
proc fcQFormLayout_override_virtual_itemAtWithIndex(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_itemAtWithIndex".}
proc fQFormLayout_virtualbase_takeAt(self: pointer, index: cint): pointer{.importc: "QFormLayout_virtualbase_takeAt".}
proc fcQFormLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_takeAt".}
proc fQFormLayout_virtualbase_setGeometry(self: pointer, rect: pointer): void{.importc: "QFormLayout_virtualbase_setGeometry".}
proc fcQFormLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_setGeometry".}
proc fQFormLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_minimumSize".}
proc fcQFormLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_minimumSize".}
proc fQFormLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_sizeHint".}
proc fcQFormLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_sizeHint".}
proc fQFormLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QFormLayout_virtualbase_invalidate".}
proc fcQFormLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_invalidate".}
proc fQFormLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QFormLayout_virtualbase_hasHeightForWidth".}
proc fcQFormLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_hasHeightForWidth".}
proc fQFormLayout_virtualbase_heightForWidth(self: pointer, width: cint): cint{.importc: "QFormLayout_virtualbase_heightForWidth".}
proc fcQFormLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_heightForWidth".}
proc fQFormLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QFormLayout_virtualbase_expandingDirections".}
proc fcQFormLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_expandingDirections".}
proc fQFormLayout_virtualbase_count(self: pointer, ): cint{.importc: "QFormLayout_virtualbase_count".}
proc fcQFormLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_count".}
proc fQFormLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_geometry".}
proc fcQFormLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_geometry".}
proc fQFormLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_maximumSize".}
proc fcQFormLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_maximumSize".}
proc fQFormLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QFormLayout_virtualbase_indexOf".}
proc fcQFormLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_indexOf".}
proc fQFormLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QFormLayout_virtualbase_isEmpty".}
proc fcQFormLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_isEmpty".}
proc fQFormLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QFormLayout_virtualbase_controlTypes".}
proc fcQFormLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_controlTypes".}
proc fQFormLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_layout".}
proc fcQFormLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_layout".}
proc fQFormLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QFormLayout_virtualbase_childEvent".}
proc fcQFormLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_childEvent".}
proc fQFormLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QFormLayout_virtualbase_event".}
proc fcQFormLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_event".}
proc fQFormLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QFormLayout_virtualbase_eventFilter".}
proc fcQFormLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_eventFilter".}
